@@ -778,7 +778,10 @@ $wgMessageStructure = array(
 		'largefileserver',
 		'emptyfile',
 		'fileexists',
+		'fileexists-extension',
 		'fileexists-thumb',
+		'fileexists-thumbnail-yes',
+		'file-thumbnail-no',
 		'fileexists-forbidden',
 		'fileexists-shared-forbidden',
 		'successfulupload',
